# aktuellt-alarmclock

./: .gitignore  README.md  config.example.json  config.json  dependencies.md
backend/: CMakeLists.txt
backend/src/: api_response.hpp  main.cpp
scripts/: download_aktuellt.sh  play_latest.sh  resolve_latest_aktuellt  resolve_latest_aktuellt.cpp  url_resolver.py
systemd/: aktuellt-play.service
